message_editing: Fix topic edit propagate option cut-off.
In the topic changing UI, the 'Change later messages to this topic'
and other options in the drop down were cut off
when selected in some languages.
This commit makes the selection box width adjust
appropriately according to the length of the text.
It also moves it down to a new line for all users.

--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -1534,12 +1534,30 @@ div.focused_table {
 
 #message_edit_topic {
     margin: 0 5px 5px 0;
+    width: auto;
 }
 
 .message_edit_header {
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
+}
+
+/* Note the .select_stream_setting CSS class is both used explicitly
+   and generated by the dropdown_list_widget module. */
+.select_stream_setting {
+    height: 35px;
+
+    .button {
+        text-align: left;
+
+        .fa-pencil {
+            float: right;
+            position: relative;
+            top: 2px;
+            padding-left: 5px;
+        }
+    }
 }
 
 .select_edit_stream {
@@ -1557,8 +1575,7 @@ div.focused_table {
 }
 
 .message_edit_topic_propagate {
-    display: inline-block;
-    width: 300px;
+    width: auto;
     margin-bottom: 5px !important;
     max-width: 100%;
 }
@@ -2562,7 +2579,7 @@ div.topic_edit_spinner .loading_indicator_spinner {
     }
 
     .stream_header_colorblock {
-        margin-bottom: 20px;
+        margin-bottom: 6px;
     }
 
     textarea {
